<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tool:context=".activity.Home"
    tool:ignore="SPUsage,ContentDescription">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:padding="25dp"
        android:src="@drawable/img_burgerking" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#23282B"
                android:padding="10dp"
                app:alignmentMode="alignBounds"
                app:columnCount="2"
                app:rowOrderPreserved="false"
                app:useDefaultMargins="true">

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_menu"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/nav_menu_list"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/tv_my_cart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_mycart"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/nav_my_cart"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/tv_book_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_bookedorder"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"

                    android:text="@string/nav_book_order"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/tv_favourite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_favorite"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/nav_favourite"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/tv_aboutUs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btn_aboutus"
                    android:gravity="center_horizontal"

                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/nav_about_us"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />

                <TextView
                    android:id="@+id/tv_ourPolicy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/btnpolicy"
                    android:gravity="center_horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/nav_our_policy"
                    android:textAllCaps="true"
                    android:textColor="@color/text_white"
                    app:layout_columnWeight="1"
                    app:layout_gravity="fill_horizontal" />
            </androidx.gridlayout.widget.GridLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#1A1B1B">

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_share"
                    android:textColor="@color/text_white"
                    android:textSize="18dp" />

                <LinearLayout
                    android:id="@+id/ll_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_share"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_shareFB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/btnfacebook"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/nav_facebook"
                        android:textAllCaps="true"
                        android:textColor="@color/text_white" />

                    <TextView
                        android:id="@+id/tv_shareWA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/btnwhatsapp"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/nav_whatsapp"
                        android:textAllCaps="true"
                        android:textColor="@color/text_white" />

                    <TextView
                        android:id="@+id/tv_shareOther"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="5dp"
                        android:drawableTop="@drawable/btnshare"
                        android:gravity="center_horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/nav_others"
                        android:textAllCaps="true"
                        android:textColor="@color/text_white" />
                </LinearLayout>
                <Button
                    android:id="@+id/btn_loginDeliveryBoy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_share"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:text="@string/login_as_delivery_boy"
                    android:textColor="@color/text_white"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>