<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/round_corner">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/txt_register"
            android:textAllCaps="true"
            android:textColor="@color/text_black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/et_mobileNumber"
            style="@style/textview_delivery_theme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/txt_phone_number"
            android:inputType="phone"
            app:layout_constraintBottom_toTopOf="@+id/already_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/already_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/alreadydialog_text"
            android:textAlignment="gravity"
            android:textColor="@color/text_black"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/ll_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_mobileNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/ll_button"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <Button
                android:id="@+id/buttonCancel"
                style="?android:attr/buttonBarStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_margin="2dp"
                android:layout_height="match_parent"
                android:background="@drawable/add_to_cart_button"
                android:text="@string/btn_close"
                android:textColor="@color/text_white"
                android:textSize="@dimen/my_closedialog_text_size"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>